--- a/fun.html
+++ b/fun.html
@@ -11,6 +11,8 @@
             <li>Cheese</li>
         </ul>
 
+        <h1>Whatever</h1>
+
         <a href="https://google.com/">Add Grocery Item</a>
 
         <img src="https://i.insider.com/5c005d9bac00e20fe169f725?width=700">
